[package]
name = "static_raytracing"
version = "0.1.1"
authors = ["Feng Liang <feng.liang@kaust.edu.sa>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixel-canvas = "0.2.2"
rayon = "1.5"
num-traits = "0.2.14"
rand = "0.8.4"
image = "0.23.14"

[profile.release]
lto = true